# summary-service

./: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt
app/: consul_registration.py  database.py
app/controllers/: __init__.py  summaries.py
app/models/: __init__.py  base.py  summary.py
app/routers/: __init__.py
app/services/: __init__.py  ai_service.py  summary_service.py
app/utils/: exceptions.py
tests/: conftest.py  test_health.py  test_summary.py  test_summary_service_fase5.py
