[project]
name = "extract-text-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.35.0",
    "openai>=2.31.0",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]
