[project]
name = "summary-service"
version = "1.0.0"
description = "Microservice for document summarization using AI (Gemma4)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.35.0",
    "openai>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
